# hotodoc

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  hotdoc.mk  libhotodoc.pc.in
docs/reference/: .gitignore  hotdoc.json.in
docs/reference/markdown_files/: index.markdown
hotodoc/: hotodoc.c  hotodoc.h
m4/: hotdoc.m4
